# RNC

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
docs/: Corpora.md  Examples.md  HTTP params.md  RNC_API.md  TODO.md  Why.md
docs/Lexgram search params/: AccentologicalCorpus.md  AccentologyCorpus.md  DialectCorpus.md  DialectalCorpus.md  Main Corpus.md  MultimodalCorpus.md  Paper2000Corpus.md  PaperRegionalCorpus.md  SpokenCorpus.md  TutoringCorpus.md
docs/Lexgram search params/Parallel Corpus/: Armenian.md  Bashkir.md  Belarusian.md  Bulgarian.md  Buryatian.md  Chinese.md  Czech.md  English.md  Estonian.md  Finnish.md  French.md  German.md  Italian.md  Latvian.md  Lithuanian.md  Polish.md  Spanish.md  Swedish.md  Ukrainian.md
rnc/: __init__.py  corpora.py  corpora_logging.py  corpora_params.py  corpora_requests.py  examples.py
src/: additional.py  corpora.py  corpora_logging.py  corpora_requests.py  examples.py
tests/: main_corpus_tests.py  test_corpora.py  test_examples.py  test_params.py  test_requests.py
tests/corpora/: template.py  test_accentological_corpus.py  test_corpora.py  test_dialectal_corpus.py  test_main_corpus.py  test_multilangual_para_corpus.py  test_multimodal_corpus.py  test_paper_2000_corpus.py  test_paper_regional_corpus.py  test_parallel_corpus.py  test_spoken_corpus.py  test_tutoring_corpus.py
